fix: add padding to sidebar category items for spacing

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -72,6 +72,7 @@ li.archives-details-item {
 li.sidebar-cat-item {
     list-style: none !important;
     width: 100%;
+    padding: 2px 0 !important;
 
     a {
         display: inline-flex !important;
